ベーシックな部分を作成中

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     # ホストの./srcディレクトリをコンテナの/app/srcにマウント
     volumes:
       - ./src:/app/src
+      - ./fonts:/fonts
     ports:
       - 8000:8000
     # コンテナの標準入力を開き、TTYを割り当てる (インタラクティブな操作に必要)
