--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.9'
+    - name: Install apt dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y fontconfig libgl1-mesa-dev libglu1-mesa libopencv-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
